--- a/app/views/application/hello.html.erb
+++ b/app/views/application/hello.html.erb
@@ -1,5 +1,5 @@
+<% hello %>
 <h1>Hi, <%= session[:name] %>.</h1>
 <%= form_tag ({controller: 'sessions', action: 'destroy', method: 'post'}) do %>
   <input type=submit value='logout'>
 <% end %>
-
